<resources>
    <string name="app_name">wang17-FeelsBook</string>
    <string name="joy">Joy</string>
    <string name="love">Love</string>
    <string name="surprise">Surprise</string>
    <string name="anger">Anger</string>
    <string name="sadness">Sadness</string>
    <string name="fear">Fear</string>
    <string name="question">What\'s up dude?</string>
    <string name="history">History</string>
    <string name="joy_count">0</string>
    <string name="love_count">0</string>
    <string name="sadness_count">0</string>
    <string name="fear_count">0</string>
    <string name="surprise_count">0</string>
    <string name="anger_count">0</string>
    <string name="comment">Wannna add some comments ?</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="homepage">HomePage</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="count">Count</string>
</resources>
