<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/postview"
    tools:context=".joyEmotion">

    <EditText
        android:id="@+id/comment"
        android:layout_width="292dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/comment"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_view"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/post"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/post"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:background="@drawable/button_view"
        android:onClick="post"
        android:text="@string/post"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel" />

    <ImageView
        android:id="@+id/emoji"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/joy" />

</android.support.constraint.ConstraintLayout>